@@ -8,7 +8,9 @@ có lương đề nghị phù hợp cho từng task rồi chia công việc.
 
 -Database: sữ dụng sqlite3. Driver và data chưá trong thư mục DatabaseResource.
 
-- Sữ dụng library JavaFX (để chạy programme add các file ".jar" trong "DatabaseResource/javafx-sdk/lib" vào project cũa bạn)
+- Sữ dụng library JavaFX sdk 11 (để chạy programme cần cài JavaFx library https://gluonhq.com/products/javafx/ ;
+  Khi chạy trong IntelliJ, add "--module-path path-đến-library-của-JavaFx/javafx-sdk-11.0.2/lib  --add-modules javafx.controls,javafx.fxml"   vào   'Debug Configurations/VM Options' )
+
 
 -đăng nhập bằng admin (username:admin ; password: 123) HOẶC tự tạo tài khoản HOẶC xài tài khoản nhân viên mẫu
 (username: yaiba ; password: 123).
